# mcu_cli

./: !calculation_config.toml  .gitignore  requirements.txt  setup  setup.cfg  test.xlsx
src/: !calculation_chain.toml  requirements.txt
src/!!!handler/: __init__.py  config.json  copy.py  filter.py  main.py  post_processing.py
src/cli/: CLI.py  __main__.py  requirements.txt
src/cli/display/: display.py
src/cli/display/tests/: test_display.py
src/cli/info/: __init__.py  info.py  info_config.yml
src/cli/info/test_data/f1/: 20.09.2021_burn
src/cli/info/test_data/f6/: 20.09.2021_burn.FIN  20.09.2021_burn.FIN_B0  (+1 more)
src/cli/info/tests/: test_info.py
src/cli/post_processing/: excel_exporter.py  extracter_fin.py
src/cli/runner/: __init__.py  run.py  runs_chain.py
src/cli/runner/tests/: test_run.py  test_runs_chain.py
src/cli/support/: main.py
src/handler/: __init__.py  clear.py  copy.py  excel_exporter.py  extracter_fin.py  extracter_rez.py  filter.py  info.py  info_config.yml  main.py  post_processing.py  progress_bar.py  requirements.txt  run.py
src/test_data/f2/: mcu5mpi.bat
src/test_data/f5/: burn
src/test_data/f6/: burn  burn.FIN  burn.LST  burn.MCU  burn.SYS  burn.txt
src/test_data/f7/: ENERGY.FIS  PARAMETE.BUR  burn.BK  burn.D  burn.DEN  burn.FIN  burn.FIN_B1  burn.INI  burn.LST_B0  burn.MCU  burn.PRT  burn.SB  burn.SIG
src/tests/: test_cli.py  test_copy.py  test_extracter_fin.py  test_extracter_rez.py  test_filter.py  test_fitler.py  test_info.py  test_main.py  test_post_processing.py  test_progress_bar.py  test_run.py
(+56 files in other folders)
